--- a/quic/libp2p/muxers/mplex/mplex.html
+++ b/quic/libp2p/muxers/mplex/mplex.html
@@ -210,8 +210,6 @@ window.addEventListener("DOMContentLoaded", main2);
   isClosed: bool
   oid*: Oid
   maxChannCount: int">Mplex</a></li>
-  <li><a class="reference" href="#TooManyChannels"
-    title="TooManyChannels = object of MuxerError">TooManyChannels</a></li>
 
   </ul>
 </li>
@@ -282,9 +280,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L38"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L40"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L38" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -302,21 +300,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L40"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L42"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="TooManyChannels" class="tohide">
-<dt><pre><a href="lpchannel.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L37"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L37" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L42" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -331,9 +317,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L27"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L30"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L27" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L30" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -345,26 +331,26 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="new,typeMplex,Connection,Duration,Duration,int" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeMplex%2CConnection%2CDuration%2CDuration%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">M</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">Mplex</span><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span>
          <span class="Identifier">inTimeout</span><span class="Other">,</span> <span class="Identifier">outTimeout</span><span class="Other">:</span> <span class="Identifier">Duration</span> <span class="Other">=</span> <span class="Identifier">DefaultChanTimeout</span><span class="Other">;</span>
-         <span class="Identifier">maxChannCount</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">MaxChannelCount</span><span class="Other">)</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}</pre></dt>
+         <span class="Identifier">maxChannCount</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">MaxChannelCount</span><span class="Other">)</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L195"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L197"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L195" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L197" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="shortLog,Mplex" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#shortLog%2CMplex"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">func</span> <a href="#shortLog%2CMplex"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="lpchannel.html#Mplex"><span class="Identifier">Mplex</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L49"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L51"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L51" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -379,9 +365,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L52"
+href="https://github.com/status-im/nim-libp2p/tree/quic/libp2p/muxers/mplex/mplex.nim#L54"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L52" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/mplex/mplex.nim#L54" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -390,7 +376,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#close.e,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#handle.e,Muxer"><span class="Identifier">handle</span></a>
+<a href="../muxer.html#formatItIMPL.t,Muxer"><span class="Identifier">formatItIMPL</span></a>, <a href="../muxer.html#new,typedesc[MuxerProvider],MuxerConstructor,string"><span class="Identifier">new</span></a>, <a href="../muxer.html#MuxerProvider"><span class="Identifier">MuxerProvider</span></a>, <a href="../muxer.html#close.e,Muxer"><span class="Identifier">close</span></a>, <a href="../muxer.html#shortLog,Muxer"><span class="Identifier">shortLog</span></a>, <a href="../muxer.html#MuxerError"><span class="Identifier">MuxerError</span></a>, <a href="../muxer.html#MuxerConstructor"><span class="Identifier">MuxerConstructor</span></a>, <a href="../muxer.html#Muxer"><span class="Identifier">Muxer</span></a>, <a href="../muxer.html#newStream.e,Muxer,string,bool"><span class="Identifier">newStream</span></a>, <a href="../muxer.html#DefaultChanTimeout"><span class="Identifier">DefaultChanTimeout</span></a>, <a href="../muxer.html#MuxerHandler"><span class="Identifier">MuxerHandler</span></a>, <a href="../muxer.html#StreamHandler"><span class="Identifier">StreamHandler</span></a>, <a href="../muxer.html#TooManyChannels"><span class="Identifier">TooManyChannels</span></a>, <a href="../muxer.html#handle.e,Muxer"><span class="Identifier">handle</span></a>
 </dl></div>
 
   </div>
@@ -400,7 +386,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-02 14:09:23 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-03 14:50:50 UTC</small>
       </div>
     </div>
   </div>
